@@ -1,6 +1,7 @@
 version 2.1-rc1 - XX-Mar-2013
 . [NEW] DrawingPrimitives: Added DrawSolidCircle, DrawArc, DrawSolidArc
 . [NEW] GLProgram: Added 2 class methods to create the instance
+. [FIX] Director: Only create the statsLabels if view is not nil
 . [FIX] GLProgram: If shader files are not found at init time, returns nil and log warning on console
 . [FIX] Texture2D: Logs using RGB565 textures only if RGB565 is being used
 . [3RD] JS Bindings: Updated to v0.6
